{
    "version": 1,
    "name": "P_InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "88042732-3954-446c-9579-f9c44af6802b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "89c81cb6-669b-42db-852c-c2f0213eaf0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "3ec12095-1c40-4374-8082-9a2b5c076441",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5722f33d-090d-40f2-b4e7-fb86140f3128",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f20a5c17-22f4-4c70-a2df-8fa8802180db",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "818820cc-1231-4e52-894f-f9306a651d6d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85e9b87b-75ff-4baf-8bf9-2f566516c097",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ca9c59dd-644f-40f4-a13c-ed177bdbfac8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dc02d794-dcfe-46e7-8d1a-b186bea67744",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d52488fb-3952-40ec-8847-57d64be1fb32",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "3880069f-ae40-4215-b7f5-00748027e168",
            "actions": [
                {
                    "name": "ToggleStats",
                    "type": "Button",
                    "id": "b26e1a91-c41c-4d3c-8481-7b6662c14015",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "297a4245-1580-4839-a3ad-75057190f2d3",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleStats",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "821d0caf-ce2c-4f03-afb9-07800f070915",
            "actions": [
                {
                    "name": "GainExp",
                    "type": "Button",
                    "id": "ff784e66-f00c-4641-a396-797ded21e916",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDamaged",
                    "type": "Button",
                    "id": "ab623e52-d722-494d-94b1-4aafcd6d7e5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnHealed",
                    "type": "Button",
                    "id": "ec6d2d3d-b758-4006-af0b-1feb7e3770f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3aee1719-2867-46de-a2f6-41cebb460c60",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GainExp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d20d81f6-6914-4ba5-99d4-fccd1d45bea3",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDamaged",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ce79e09-ea96-4e21-93af-bd64734a5af9",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnHealed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}